# find_vacancies_sql

./: .gitignore  README.md  config.py  feachers.py  main.py  pyproject.toml
src/: create_database.py  db_manager.py  get_vacancies.py  user_interface.py  utils.py  vacancies.py
