[tool.poetry]
name = "find-vacancies-sql"
version = "0.1.0"
description = "A project to find vacancies using"
authors = ["Your Name <you@example.com>"]
license = "no"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
